# polkadot-contract

./: .gitignore  Cargo.toml  Makefile  README.md  call_from_sol.sol
.cargo/: config.toml
src/: agreement_management.rs  job_management.rs  main.rs  proposal_management.rs  types.rs
